<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirAdmin</string>
    <string name="action_settings">Settings</string>
    <string name="fetching">Fetching server response......!</string>
    <string name="fetching_local">Fetching from local store......!</string>
    <!-- launcher xml -->
    <string name="back">&lt;&lt;</string>
    <string name="forward">&gt;&gt;</string>

    <!-- SignIn xml -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="airoffers">AirOffers</string>
    <string name="signin">Sign In</string>
    <string name="uname_not_matching">Authorization Required. Invalid email/password combination.</string>
    <string name="logut_alert">Do you really want to logout?</string>
    <string name="signing">Please wait Signing in...</string>
    <string name="loading">Loading...</string>
    <string name="singin_panel_text">Lorem ipsum dolor sit amet.</string>
    <string name="account">ACCOUNT</string>
    <string name="about">ABOUT</string>
    <string name="general">GENERAL</string>
    <string name="manage_menu">Manage Menus</string>
    <string name="left_arrow">&lt;</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="live_orders">Live Orders</string>
    <string name="preview_cards">Preview Cards</string>
    <string name="manage_sensors">Sensors</string>
    <string name="logout">Logout</string>
    <string name="security">Security</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="email_blank">Invalid Email Address.</string>
    <string name="invalid_email">Invalid Email Address.</string>
    <string name="password_blank">Enter your Password.</string>
    <string name="no_item_found">No Items Found.</string>
    <string name="estimote">ESTIMOTE</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_live_orders">No Pending Orders to be processed.</string>
    <string name="no_active_sensors">You have not activated any Sensors.</string>
    <string name="alert_validate_sensor">Do you want to check if the sensor is reachable from this device?</string>
    <string name="validate_btn">Validate</string>
    <string name="cancel_btn">Cancel</string>
    <string name="please_wait_validating">Please wait validating...</string>
    <string name="could_not_find_sensor">Could not find the Sensor.Do you want to Archive it?</string>
    <string name="archive">Archive</string>
 	<string name="wait_archiving">Please wait Archiving...</string>
 	<string name="adv_interval">Advertising Interval</string>
 		<string name="power">Power</string>
 	
 	
</resources>